Corrigir formato do package.json

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "monitoramento-de-acessibilidade-web-com-integracao-de-cicd",
   "version": "1.0.0",
-  "description": "",
+  "scripts": {
+    "test": "cypress run"  // Remova este comentário
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "scripts": {
-    "test": "cypress run" // Comando para executar os testes do Cypress
-  },
+  "description": "",
   "devDependencies": {
     "axe-core": "^4.10.0",
     "cypress": "^13.14.2"
